Change css to scss

--- a/css/style.css
+++ b/css/style.css
@@ -1,242 +1,1 @@
-@charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-@import url(https://fonts.googleapis.com/css?family=Offside);
-
-/* Regras Gerais */
-.btn {
-    border: 3px solid #fff;
-    color: #fff;
-    font-style: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    letter-spacing: .1em;
-    padding: 10px 30px;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-.btn:hover {
-    border-color: #44fadd;
-    background-color: #44fadd;
-    color: #fff;
-}
-
-.subtitle {
-    text-align: center;
-    font-size: 25px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-size: 24px;
-	line-height: 30px;
-	letter-spacing: .1em;
-    margin-bottom: 40px;
-    margin-top: 40px;
-    color: rgb(69, 65, 113);
-}
-
-.subtitle:after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background: rgb(69, 65, 113);
-    margin: 8px auto;
-}
-
-.description {
-    color: rgb(69, 65, 113);
-    text-align: left;
-    margin-top: 160px;
-    font-size: 20px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-/* Header */
-.header {
-    width: 100%;
-    background-color: rgba(69, 65, 113, 0.9);
-    position: fixed;
-    top: 0;
-    z-index: 10;
-    padding: 15px 0;
-}
-
-.header_menu {
-    text-align: right;
-}
-
-.header .header_menu ul li {
-    display: inline-block;
-    padding: 15px 10px;
-    margin-left: 25px;
-    margin-top: 25px;
-}
-
-.header .header_menu ul li a {
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: .1em;
-    padding: 15px 3px;
-}
-
-.header .header_menu ul li a:hover {
-    color: #44fadd;
-    border-bottom: 2px solid #44fadd;
-}
-
-/* Introdução */
-.introducao {
-    width: 100%;
-    height: 500px;
-    background: url("../img/bg.jpg") no-repeat center;
-    background-size: cover;
-    text-align: center;
-    margin-top: 133px;
-    padding-top: 80px;
-}
-
-.introducao h1 {
-    color: #fff;
-    font-family: 'Offside', cursive;
-    font-size: 80px;
-    font-weight: 700;
-    letter-spacing: .1em;
-    text-transform: lowercase;
-}
-
-.introducao .subtitle_menu {
-    font-family: 'Offside', cursive;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 400;
-    text-transform: lowercase;
-    padding-top: 10px;
-    padding-bottom: 45px;
-}
-
-/* Serviços */
-.servicos .material-icons {
-    font-size: 400px;
-    text-align: center;
-    color: rgb(69, 65, 113);
-}
-
-/* Sobre */
-section.sobre {
-    background-color: rgb(69, 65, 113);
-}
-
-section.sobre h2.subtitle, h2.subtitle:after {
-    color: #fff;
-}
-
-section.sobre .subtitle:after {
-    background: #fff;
-}
-
-section.sobre p.description-sobre {
-    color: #fff;
-    font-size: 24px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 200;
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-section.sobre .material-icons {
-    color: #fff;
-    text-align: center !important;
-    font-size: 40px;
-    margin-bottom: 40px;
-}
-
-section.sobre .material-icons:hover {
-    color: #44fadd;
-    font-size: 45px;
-    margin-bottom: 35px;
-}
-
-/* Produtos */
-table, thead, tbody, tr, th, td {
-    border-bottom: 2px solid #44fadd;
-    padding: 5px;
-}
-
-table {
-    border-collapse: collapse;
-    margin-bottom: 40px;
-}
-
-.tabela-titulo {
-    color: rgb(69, 65, 113);
-    font-size: 24px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.tabela-conteudo  th {
-    color: rgb(69, 65, 113);
-    font-size: 24px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 200;
-    text-align: left;
-    padding-right: 40px;
-}
-
-/* Contato */
-section.contato .btn {
-    background: #fff;
-    border: 3px solid rgb(69, 65, 113);
-    color: rgb(69, 65, 113);
-    font-style: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    letter-spacing: .1em;
-    padding: 10px 30px;
-    text-transform: uppercase;
-}
-
-section.contato .btn:hover {
-    border-color: #44fadd;
-    background-color: #44fadd;
-    color: #fff;
-}
-
-section.contato .button {
-    text-align: center;
-    margin: 20px 40px;
-}
-
-section.contato form.form-contato {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 20px;
-}
-
-section.contato form.form-contato input, textarea {
-	width: 100%;
-    border: none;
-    border-bottom: 1px solid #44fadd;
-}
-
-section.contato .video-contato {
-    width: 100%;
-    height: 100%;
-}
-
-/* Footer */
-.footer {
-    width: 100%;
-    background-color: rgb(69, 65, 113);
-}
-
-.footer .nome {
-    color: #fff;
-    font-family: 'Offside', cursive;
-    font-size: 18px;
-    padding: 30px 0;
-}
-
-.footer .contato {
-    color: #fff;
-    font-family: 'Offside', cursive;
-    font-size: 18px;
-    padding: 30px 0;
-    text-align: right;
-}
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:0.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace, monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.container{width:960px;margin:0 auto;padding:0px;position:relative}.container:after,.container:before{content:" ";display:table}.container:after{clear:both}.grid-1,.grid-2,.grid-3,.grid-4,.grid-5,.grid-6,.grid-7,.grid-8,.grid-9,.grid-10,.grid-11,.grid-12,.grid-13,.grid-14,.grid-15,.grid-16,.grid-1-3{float:left;margin-left:10px;margin-right:10px}.grid-1{width:40px}.grid-2{width:100px}.grid-3{width:160px}.grid-4{width:220px}.grid-5{width:280px}.grid-6{width:340px}.grid-7{width:400px}.grid-8{width:460px}.grid-9{width:520px}.grid-10{width:580px}.grid-11{width:640px}.grid-12{width:700px}.grid-13{width:760px}.grid-14{width:820px}.grid-15{width:880px}.grid-16{width:940px}.grid-1-3{width:300px}
