Create grid in scss

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,2 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Offside);
+
 @import 'normalize';
-@import 'grid'
+@import 'grid';
+@import 'geral';
