--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -2,5 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Offside);
 
 @import 'normalize';
+@import 'mixins';
 @import 'grid';
 @import 'geral';
